# Micro_Computer_Technik

./: .gitignore  CMakeLists.txt  Readme.md
.mcuxpressoide_packages_support/: info.properties
CMSIS_CORE_LPC17xx/: .cproject
Mct_A3/: .cproject  .project  Mct_A3 LinkServer Debug.launch  Mct_A3.doxyfile  Readme.md
Mct_A3/DoxygenOutput/html/: _mct___a3_8c.html  _mct___a3_8c.js  _mct___a3_8c__incl.map  _mct___a3_8c__incl.md5  _mct___a3_8c_a840291bc02cba5474a4cb46a9b9566fe_cgraph.map  _mct___a3_8c_a840291bc02cba5474a4cb46a9b9566fe_cgraph.md5  _mct___a3_8h_source.html  bug.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  globals.html  globals_func.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  todo.html
Mct_A3/DoxygenOutput/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  pages_1.js  searchdata.js
Mct_A3/src/: Mct_A3.c  Mct_A3.h
Mct_B4/: .cproject  .project  Mct_B4 LinkServer Debug.launch  Mct_B4.doxyfile
Mct_B4/DoxygenOutput/html/: _clock_8c.html  _clock_8c.js  _clock_8c__incl.map  _clock_8c__incl.md5  _clock_8c_a471decc9a7763edf9abae04c62625142_cgraph.md5  _clock_8c_a5203aee24b8ee3f0bb1a5bd7400f6455_cgraph.map  _clock_8c_a5203aee24b8ee3f0bb1a5bd7400f6455_cgraph.md5  _clock_8c_a584ac9d5fe069f95d2dc52f96bb012de_cgraph.map  _clock_8c_a584ac9d5fe069f95d2dc52f96bb012de_cgraph.md5  _clock_8h.html  _clock_8h.js  _clock_8h__dep__incl.map  _clock_8h__dep__incl.md5  _clock_8h__incl.map  _clock_8h__incl.md5  _clock_8h_a471decc9a7763edf9abae04c62625142_cgraph.map  _clock_8h_a8a6ae8ff6349a08c060c7146cdd754bf_cgraph.map  _clock_8h_a8a6ae8ff6349a08c060c7146cdd754bf_cgraph.md5  _clock_8h_source.html  _event_details_menu_8c.html  _event_details_menu_8c.js  _event_details_menu_8c__incl.map  _event_details_menu_8c__incl.md5  _event_details_menu_8h.html  _event_details_menu_8h.js  _event_details_menu_8h__dep__incl.map  _event_details_menu_8h__dep__incl.md5  _event_details_menu_8h__incl.map  _event_details_menu_8h__incl.md5  _event_details_menu_8h_source.html  _events_8c.html  _events_8c.js  _events_8c__incl.map  _events_8c__incl.md5  _events_8h.html  _events_8h.js  _events_8h__dep__incl.map  _events_8h__dep__incl.md5  _events_8h__incl.map  _events_8h__incl.md5  (+266 more)
Mct_B4/DoxygenOutput/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.html  defines_0.js  defines_1.html  defines_1.js  defines_2.html  defines_2.js  defines_3.html  defines_3.js  defines_4.html  defines_4.js  defines_5.html  defines_5.js  (+53 more)
Mct_B4/inc/: Clock.h  EventDetailsMenu.h  Events.h  EventsMenu.h  FrontIO.h  GPIO.h  I2C.h  I2CLEDs.h  LCD.h  LEDKey.h  MainMenu.h  Mct_B4.h  Menu.h  RGBLED.h  RTC.h  Serial.h  State.h  Timer.h
Mct_B4/inc/mclite/: i2c_1769.h  lcdlib_1769.h
Mct_B4/libi2c_lcd_mctlite/: readme.txt  types.h
Mct_B4/src/: Clock.c  EventDetailsMenu.c  Events.c  EventsMenu.c  FrontIO.c  GPIO.c  I2C.c  I2CLEDs.c  LCD.c  LDEKey.c  LEDKey.c  MainMenu.c  Mct_B4.c  Menu.c  RGBLED.c  RTC.c  Serial.c  State.c  Timer.c
include/: cr_section_macros.h
